# proactive-onboarding-engine

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06489f93a923_add_relationship_for_chat_model_with_.py  358aad9aef10_rename_metadata_field_to__metadata.py  3adcf8150627_rename__metadata_field_to_chat_metadata.py  483592fb6777_create_chat_models.py  f0c96a09d8a6_initial_migration.py  fedc2e54ece5_create_chat_models.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  onboarding.py
backend/app/core/: config.py
backend/app/engine/: __init__.py
backend/app/engine/agents/: researcher.py
backend/app/engine/prompts/: planner_prompt.py
backend/app/engine/tools/: ddgs.py  youtube.py
backend/app/engine/utils/: output_parser.py
backend/src/: main.py  models.py
backend/src/auth/: dependencies.py  jwt.py
backend/src/chat/: models.py  routers.py  schema.py  websocket.py
backend/src/chat/services/: __init__.py  ai.py  chat.py
backend/src/core/: config.py  database.py  exceptions.py  models.py  redis.py
backend/src/core/utils/: hashing.py  ingest.py
backend/src/engine/: __init__.py  entrypoint.py
backend/src/engine/agents/: __init__.py  planner.py  policy_researcher.py  researcher.py  roadmap_creater.py
backend/src/engine/models/: llm.py
backend/src/engine/prompts/: planner_prompt.py  policy_prompt.py  research_prompt.py  roadmap_prompt.py
backend/src/users/: models.py  routers.py  schema.py  services.py
docs/: api.md
(+24 files in other folders)
